add feed route to openapi
